--- a/MdFahimFaezAbir-30028/Base.lproj/Main.storyboard
+++ b/MdFahimFaezAbir-30028/Base.lproj/Main.storyboard
@@ -1,24 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qVw-Bh-IN0">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="ES4-Nn-IQ7">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="qVw-Bh-IN0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="92p-tw-fdL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Weh-53-5oz">
+                                <rect key="frame" x="50" y="248" width="314" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="C45-r6-5we"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="kCh-Kx-UGO" kind="embed" id="a5w-rR-xSV"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nfl-YP-Zq9"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Weh-53-5oz" firstAttribute="centerY" secondItem="92p-tw-fdL" secondAttribute="centerY" id="0sJ-c1-mIM"/>
+                            <constraint firstItem="Weh-53-5oz" firstAttribute="leading" secondItem="nfl-YP-Zq9" secondAttribute="leading" constant="50" id="Nyj-mo-dMm"/>
+                            <constraint firstItem="nfl-YP-Zq9" firstAttribute="trailing" secondItem="Weh-53-5oz" secondAttribute="trailing" constant="50" id="fXi-7s-qJg"/>
+                            <constraint firstItem="Weh-53-5oz" firstAttribute="centerX" secondItem="92p-tw-fdL" secondAttribute="centerX" id="jso-t8-qzM"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yLM-V6-r1Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="467" y="333"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1yA-dU-Hfj">
+            <objects>
+                <viewController id="kCh-Kx-UGO" customClass="ViewController" customModule="MdFahimFaezAbir_30028" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="94p-FO-XNL">
+                        <rect key="frame" x="0.0" y="0.0" width="314" height="400"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8wr-g2-Vcc">
+                                <rect key="frame" x="26" y="182.5" width="262" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" cornerRadius="0.0">
+                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                    </backgroundConfiguration>
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Large Button">
+                                            <attributes>
+                                                <font key="NSFont" size="18" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" red="0.0098256419889999995" green="0.0053822704969999999" blue="0.02337709407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnLarge:" destination="kCh-Kx-UGO" eventType="touchUpInside" id="ZED-vb-8Nu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voz-Ay-FCe">
+                                <rect key="frame" x="86" y="127.5" width="142" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="142" id="uuh-Jk-2yE"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" cornerRadius="0.0">
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                    </backgroundConfiguration>
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Small Button">
+                                            <attributes>
+                                                <font key="NSFont" size="18" name="Helvetica"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" red="0.0098256419889999995" green="0.0053822704969999999" blue="0.02337709407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnSmall:" destination="kCh-Kx-UGO" eventType="touchUpInside" id="N7e-1B-gG7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hA-QQ-UhL">
+                                <rect key="frame" x="66" y="237.5" width="182" height="36.5"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" cornerRadius="0.0">
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                    </backgroundConfiguration>
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Medium Button">
+                                            <attributes>
+                                                <font key="NSFont" size="18" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" red="0.0098256419889999995" green="0.0053822704969999999" blue="0.02337709407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnMedium:" destination="kCh-Kx-UGO" eventType="touchUpInside" id="zIv-Wy-Wmv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3tJ-sG-JXC"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3hA-QQ-UhL" firstAttribute="top" secondItem="8wr-g2-Vcc" secondAttribute="bottom" constant="20" id="4fA-aq-jWT"/>
+                            <constraint firstItem="8wr-g2-Vcc" firstAttribute="centerX" secondItem="94p-FO-XNL" secondAttribute="centerX" id="6Xt-gS-mcp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="voz-Ay-FCe" secondAttribute="trailing" constant="70" id="7kL-KG-Hvp"/>
+                            <constraint firstItem="8wr-g2-Vcc" firstAttribute="leading" secondItem="94p-FO-XNL" secondAttribute="leadingMargin" constant="10" id="8Qa-Pt-YnI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3hA-QQ-UhL" secondAttribute="trailing" constant="50" id="J9n-Zh-bDM"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="3hA-QQ-UhL" secondAttribute="bottom" constant="126" id="LBt-oj-KGa"/>
+                            <constraint firstItem="voz-Ay-FCe" firstAttribute="centerX" secondItem="94p-FO-XNL" secondAttribute="centerX" id="R9M-L9-yRx"/>
+                            <constraint firstItem="8wr-g2-Vcc" firstAttribute="top" secondItem="voz-Ay-FCe" secondAttribute="bottom" constant="20" id="Vdp-AA-61o"/>
+                            <constraint firstItem="8wr-g2-Vcc" firstAttribute="centerY" secondItem="94p-FO-XNL" secondAttribute="centerY" id="bea-lE-VEa"/>
+                            <constraint firstItem="3hA-QQ-UhL" firstAttribute="centerX" secondItem="94p-FO-XNL" secondAttribute="centerX" id="e9V-rq-kuN"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xuk-fc-vMq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="767" y="-36"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
